--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,6 +17,7 @@ html {
   flex-wrap: nowrap;
 }
 
+
 /*header*/
 
 header {
@@ -86,7 +87,7 @@ nav li {
 /*Main content first-section*/
 
 .first-section {
-  background-color: #D3D3D3
+  background-color: #D3D3D3;
 }
 
 .first-section img {
@@ -159,7 +160,7 @@ nav li {
 
 .left-side img {
   width: 100%;
-  margin: 2rem 0;
+  margin: 1.5rem 0;
 
 }
 
@@ -174,12 +175,13 @@ nav li {
   line-height: 1.4rem;
   font-size: 0.9rem;
   color: #808080;
-  margin-bottom: 2.5rem;
+  padding-bottom: 2.2rem;
 }
 
 .left-side h5 {
   font-size: 0.7rem;
-  color: #404040
+  color: #404040;
+  padding-bottom: 2rem;
 }
 
 .right-side {
@@ -196,9 +198,14 @@ nav li {
   vertical-align: middle;
 }
 
+.box {
+  padding: 1rem 1rem;
+}
+
 .box .side-text {
   width: 56%;
   line-height: 2;
+  padding-left: 1rem;
 }
 
 .side-text h2 {
@@ -217,3 +224,92 @@ nav li {
   font-size: 0.7rem;
   margin-top: 0.5rem;
 }
+
+.information .box:last-child {
+  background-color: #D3D3D3;
+}
+
+/*start learning section*/
+
+.learning {
+  background-color: #D3D3D3;
+}
+
+.learning h1 {
+  padding-top: 2rem;
+  font-weight: bold;
+  color: #404040;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.courses {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 2rem 0;
+  width: 100%
+}
+
+.course-content {
+  width: 25%;
+  margin: 0 2rem 1rem 0;
+}
+
+.course-content img {
+  width: 100%;
+}
+
+.course-text {
+  background-color: white;
+  padding: 1rem 0 0 1rem;
+  height: 7rem;
+}
+
+.course-text h3 {
+  color: #404040;
+  font-weight: bold;
+  font-size: 1rem;
+  padding-bottom: 0.5rem;
+}
+
+.course-text .title {
+  color: #808080;
+  font-size: 0.7rem;
+  line-height: 1rem;
+  padding: 0.5rem 0;
+}
+
+.course-text p {
+  color: #808080;
+  font-size: 0.7rem;
+  padding-bottom: 1rem;
+  line-height: 1.4;
+}
+
+/*.learning {
+  background-color: #D3D3D3;
+  width: 100%;
+}
+
+.learning h1 {
+  padding: 2rem 0;
+  text-align: center;
+  color: #404040;
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.courses {
+  display: inline-flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 30%;
+}
+
+.courses .course-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%
+}*/
