--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -160,8 +160,7 @@ nav li {
 
 .left-side img {
   width: 100%;
-  margin: 1.5rem 0;
-
+  margin: 1rem 0;
 }
 
 .left-side h1 {
@@ -188,12 +187,12 @@ nav li {
   display: flex;
   flex-flow: column;
   vertical-align: top;
-  width: 40%;
-  padding: 0.5rem 0;
+  width: 35%;
+  /*padding: 0.5rem 0;*/
 }
 
 .right-side img {
-  width: 30%;
+  width: 35%;
   display: inline-block;
   vertical-align: middle;
 }
@@ -204,6 +203,12 @@ nav li {
 
 .box .mobile {
   display: none;
+}
+
+.side-text {
+  display: inline-flex;
+  flex-flow: column;
+  vertical-align: middle;
 }
 
 .box .side-text {
@@ -223,7 +228,7 @@ nav li {
   color: #808080;
 }
 
-.side-text a{
+.side-text a {
   color: blue;
   font-size: 0.7rem;
   margin-top: 0.2rem;
@@ -347,29 +352,32 @@ nav li {
   }
 }
 
-/*.learning {
-  background-color: #D3D3D3;
-  width: 100%;
+/*exhibit section*/
+
+.exhibit {
+  background-color: white;
 }
 
-.learning h1 {
-  padding: 2rem 0;
-  text-align: center;
-  color: #404040;
+.exhibit h1 {
+  padding: 2rem;
   font-weight: bold;
+  color: #404040;
   font-size: 2rem;
+  text-align: center;
 }
 
-.courses {
-  display: inline-flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 30%;
+.left-side video {
+  width: 100%;
+  margin-right: 1rem;
 }
 
-.courses .course-image {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%
-}*/
+.left-side h3 {
+  color: #404040;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 1.5rem 0;
+}
+
+.exhibit .box:first-child {
+  background-color: #D3D3D3;
+}
