--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -77,8 +77,7 @@ nav li {
   }
 
   header .mobile-menu ul{
-    display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
   }
@@ -153,7 +152,7 @@ nav li {
   background-color: white;
 }
 
-.left-side {
+.information .left-side {
   width: 60%;
   margin: 0 1.5rem;
 }
@@ -213,7 +212,7 @@ nav li {
 
 .box .side-text {
   width: 56%;
-  line-height: 2;
+  line-height: 2.5;
   padding-left: 1rem;
 }
 
@@ -226,6 +225,7 @@ nav li {
 .side-text p {
   font-size: 0.7rem;
   color: #808080;
+  line-height: 1.5;
 }
 
 .side-text a {
@@ -242,19 +242,19 @@ nav li {
   .information {
     /*padding-bottom: 1rem;*/
   }
-  .left-side {
+  .information .left-side {
     display: none;
   }
   .box .desktop {
     display: none;
   }
   .box {
-    padding: 0.5rem 1rem;
+    padding: 1rem 1rem 0rem 1rem;
   }
   .box .mobile {
     display: block;
   }
-  .right-side {
+  .information .right-side {
     width: 100%;
   }
   .right-side img {
@@ -287,7 +287,7 @@ nav li {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  width: 100%
+  width: 100%;
 }
 
 .course-content {
@@ -331,7 +331,8 @@ nav li {
     background-color: white;
   }
   .learning h1{
-    padding: 1rem 0;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
   }
   .course-content img {
     display: none;
@@ -366,9 +367,14 @@ nav li {
   text-align: center;
 }
 
+.exhibit .left-side {
+  width: 60%;
+  margin: 0 1.5rem;
+}
+
 .left-side video {
   width: 100%;
-  margin-right: 1rem;
+  /*margin-right: 1rem;*/
 }
 
 .left-side h3 {
@@ -380,6 +386,25 @@ nav li {
 
 .exhibit .box:first-child {
   background-color: #D3D3D3;
+}
+
+@media only screen and (max-width: 560px){
+  .exhibit .right-side {
+    display: none;
+  }
+  .exhibit .left-side {
+    width: 100%;
+    margin: auto;
+  }
+  .exhibit .left-side h3 {
+    display: none;
+  }
+  .exhibit .left-side p {
+    display: none;
+  }
+  .left-side video {
+    padding-bottom: 1.5rem;
+  }
 }
 
 /*footer*/
@@ -405,4 +430,22 @@ footer .copyright {
   display: flex;
   align-items: flex-start;
   flex: 1;
+}
+
+@media only screen and (max-width: 560px){
+  footer {
+    border: none;
+  }
+  footer nav {
+    display: none;
+  }
+  footer .navigation {
+    height: 2rem;
+    padding: 0 1.5rem;
+  }
+  footer .copyright {
+    margin: 1rem 0;
+    align-items: baseline;;
+
+  }
 }
