--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,8 +24,8 @@ header {
   width: 100%;
   position: fixed;
   z-index: 1;
-  color: #484848;
   background-color: white;
+  border-bottom: 1px solid #463163;
 }
 
 header .navigation {
@@ -43,14 +43,17 @@ header .logo {
   display: flex;
   align-items: center;
   flex: 1;
+  font-size: 1.1rem;
 }
 
 .logo h4 {
   font-weight: bold;
+  color: #463163;
 }
 
 .logo span {
   font-weight: lighter;
+  color: #463163;
 }
 
 .logo img {
@@ -59,6 +62,7 @@ header .logo {
 
 nav li {
   padding: 0 1rem;
+  color: #463163;
 }
 
 .mobile-menu {
@@ -82,6 +86,10 @@ nav li {
     width: 100%;
   }
 
+  header .mobile-menu img {
+    height: 2rem;
+  }
+
   header .mobile-menu ul{
     justify-content: space-between;
     align-items: center;
@@ -92,7 +100,7 @@ nav li {
 /*Main content first-section*/
 
 .first-section {
-  background-color: #D3D3D3;
+  background-color: #EEE8F2;
 }
 
 .first-section img {
@@ -115,17 +123,17 @@ nav li {
   font-size: 2rem;
   font-weight: bold;
   line-height: 1.2;
-  color: #404040;
+  color: #463163;
 }
 
 .side h3 {
   font-size: 1rem;
-  color: #404040;
+  color: #463163;
   padding: 1.4rem 0;
 }
 
 .side h4 {
-  background-color: #404040;
+  background-color: #463163;
   color: white;
   padding: 0.7rem 0;
   text-align: center;
@@ -178,7 +186,7 @@ nav li {
 }
 
 .left-side h1 {
-  color: #404040;
+  color: #463163;
   font-size: 2rem;
   font-weight: bold;
   margin-bottom: 1.5rem;
@@ -187,13 +195,13 @@ nav li {
 .left-side p {
   line-height: 1.4rem;
   font-size: 0.9rem;
-  color: #808080;
+  color: #64327A;
   padding-bottom: 2.2rem;
 }
 
 .left-side h5 {
   font-size: 0.7rem;
-  color: #404040;
+  color: #64327A;
   padding-bottom: 2rem;
 }
 
@@ -229,26 +237,26 @@ nav li {
 
 .side-text h2 {
   font-size: 1rem;
-  color: #404040;
+  color: #463163;
   font-weight: bold;
   line-height: 1.5;
 }
 
 .side-text p {
   font-size: 0.7rem;
-  color: #808080;
+  color: #64327A;
   line-height: 1.5;
   margin-top: 0.5rem;
 }
 
 .side-text a {
-  color: blue;
+  color: #A452C9;
   font-size: 0.7rem;
   margin-top: 0.2rem;
 }
 
 .information .box:last-child {
-  background-color: #D3D3D3;
+  background-color: #EEE8F2;
 }
 
 @media only screen and (max-width: 825px){
@@ -298,13 +306,13 @@ nav li {
 /*learning*/
 
 .learning {
-  background-color: #D3D3D3;
+  background-color: #EEE8F2;
 }
 
 .learning h1 {
   padding: 2rem;
   font-weight: bold;
-  color: #404040;
+  color: #463163;
   font-size: 2rem;
   text-align: center;
 }
@@ -333,21 +341,21 @@ nav li {
 }
 
 .course-text h3 {
-  color: #404040;
+  color: #463163;
   font-weight: bold;
   font-size: 1rem;
   padding-bottom: 0.5rem;
 }
 
 .course-text .title {
-  color: #808080;
+  color: #64327A;
   font-size: 0.7rem;
   line-height: 1rem;
   padding: 0.5rem 0;
 }
 
 .course-text p {
-  color: #808080;
+  color: #64327A;
   font-size: 0.7rem;
   padding-bottom: 1rem;
   line-height: 1.4;
@@ -381,7 +389,7 @@ nav li {
     width: 100%;
   }
   .course-text h3 {
-    background-color: #D3D3D3;
+    background-color: #EEE8F2;
     padding: 1rem;
   }
 }
@@ -395,7 +403,7 @@ nav li {
 .exhibit h1 {
   padding: 2rem;
   font-weight: bold;
-  color: #404040;
+  color: #463163;
   font-size: 2rem;
   text-align: center;
 }
@@ -417,14 +425,14 @@ nav li {
 }
 
 .left-side h3 {
-  color: #404040;
+  color: #463163;
   font-size: 1rem;
   font-weight: bold;
   padding: 1.5rem 0;
 }
 
 .exhibit .box:first-child {
-  background-color: #D3D3D3;
+  background-color: #EEE8F2;
 }
 
 @media only screen and (max-width: 825px){
@@ -458,9 +466,9 @@ nav li {
 /*footer*/
 
 footer {
-  border-top: 1px solid #808080;
+  border-top: 1px solid #463163;
   font-size: 0.7rem;
-  color: #808080;
+  color: #463163;
 }
 
 footer .navigation {
